--- a/src/presentation/components/forms/Food/FoodStyle.scss
+++ b/src/presentation/components/forms/Food/FoodStyle.scss
@@ -5,7 +5,13 @@ body {
     background-color: #89FAD0;
     font-family: 'Lobster';
 }
-
+.container {
+    display: flex;
+    justify-content: center; // Center Carousel horizontally
+    align-items: center; // Center Carousel vertically
+    height: 100vh; // Take full view height, adjust as needed
+    background-color: #988989; // Optional: background color for the container
+}
 #carousel {
     position: absolute;
     height: 200px;
@@ -39,7 +45,7 @@ body {
 
 .item {
     text-align: center;
-    color: white;
+    color: rgb(108, 55, 55);
     font-size: 40px;
     position: absolute;
     transition: height 1s, width 1s, left 1s, margin-top 1s, line-height 1s, background-color 1s;
@@ -187,7 +193,10 @@ $level2-left: 50px;
             user-select: none;
 }
 
-
+.item.hidden {
+    opacity: 0;
+    pointer-events: none; // Ensure they are not clickable
+}
 
 
 
